Taller de portafolio Jaume

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section aria-label="main" class="hero" id="main">
         <div class="hero-image">
           <img
-            src="/imagen/foto-perfil.png"
+            src="./imagen/foto-perfil.png"
             width="338"
             height="330"
             alt="foto Jaume"
@@ -53,16 +53,18 @@
           </p>
           <div class="social">
             <a class="button-icon" href="tel:971619562552"
-              ><img src="/icon/icon-phone.svg" alt="icono de telefono"
+              ><img src="./icon/icon-phone.svg" alt="icono de telefono"
             /></a>
             <a class="button-icon" href="#"
-              ><img src="/icon/icon-important_mail.svg" alt="icono de email"
+              ><img src="./icon/icon-important_mail.svg" alt="icono de email"
             /></a>
             <a class="button-icon" href="#"
               ><img src="/icon/icon-instagram.svg" alt="icono de instagram"
             /></a>
             <a class="button-icon" href="#"
-              ><img src="/icon/icon-twitter_squared.svg" alt="icono de twitter"
+              ><img
+                src="./icon/icon-twitter_squared.svg"
+                alt="icono de twitter"
             /></a>
           </div>
           <a href="https://asdas.com" class="button">Descargar Currículum</a>
@@ -75,7 +77,9 @@
             trabajar en proyectos retadores e increíbles
           </span>
           <span>Aquí hay algunos que me gustaría compartir.</span>
-          <a href="#"><img src="/icon/icons-down.svg" alt="icono of down" /></a>
+          <a href="#"
+            ><img src="./icon/icons-down.svg" alt="icono of down"
+          /></a>
         </div>
       </section>
       <div class="project">
