correción de ubicación de carpeta

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               ><img src="./icon/icon-important_mail.svg" alt="icono de email"
             /></a>
             <a class="button-icon" href="#"
-              ><img src="/icon/icon-instagram.svg" alt="icono de instagram"
+              ><img src="./icon/icon-instagram.svg" alt="icono de instagram"
             /></a>
             <a class="button-icon" href="#"
               ><img
@@ -246,16 +246,18 @@
           </div>
           <div class="social">
             <a class="button-icon" href="tel:971619562552"
-              ><img src="/icon/icon-phone.svg" alt="icono de telefono"
+              ><img src="./icon/icon-phone.svg" alt="icono de telefono"
             /></a>
             <a class="button-icon" href="#"
-              ><img src="/icon/icon-important_mail.svg" alt="icono de email"
+              ><img src="./icon/icon-important_mail.svg" alt="icono de email"
             /></a>
             <a class="button-icon" href="#"
-              ><img src="/icon/icon-instagram.svg" alt="icono de instagram"
+              ><img src="./icon/icon-instagram.svg" alt="icono de instagram"
             /></a>
             <a class="button-icon" href="#"
-              ><img src="/icon/icon-twitter_squared.svg" alt="icono de twitter"
+              ><img
+                src="./icon/icon-twitter_squared.svg"
+                alt="icono de twitter"
             /></a>
           </div>
           <div class="footer-copyright">
